# Wizualizacja-Ramienia-Robota

./: .gitignore  CMakeLists.txt  Camera.cpp  Camera.h  EBO.h  Klocek.glb  Kulka.glb  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Ramie_robota.glb  Ramie_robota1.glb  Ramie_robota_pokolorowane_wiercholki.glb  Ramie_robota_poprawa.glb  Sprawozdanie projekt programowanie obiektowe i grafika komputerowa.docx  Texture.cpp  Texture.h  VAO.cpp  VAO.h  VBO.cpp  VBO.h  Wizualizacja_ramienia_robota.sln  Wizualizacja_ramienia_robota.vcxproj  Wizualizacja_ramienia_robota.vcxproj.filters  default.frag  default.vert  glad.c  main.cpp  obiekt.glb  recording.csv  robot_arm.frag  robot_arm.vert  shaderClass.cpp  shaderClass.h
Libraries/include/glad/: glad.h
Libraries/include/json/: json.h
Libraries/include/stb/: stb_image.h
Libraries/lib/: assimp-vc143-mtd.lib  glfw3.lib
x64/Debug/: Wizualizacja_ramienia_robota.exe.recipe  Wizualizacja_ramienia_robota.ilk  Wizualizacja_ramienia_robota.vcxproj.FileListAbsolute.txt  vc143.idb
x64/Debug/Wizualiz.7ed0a3d7.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Wizualizacja_ramienia_robota.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
